# phytium_neon

./: .gitignore  README.md  demo.py  main.py  requirements.txt  scripts.py
clib/: CMakeLists.txt  CMakeLists.txt.bak  README.md  benchmark.cpp  detect-image.cpp  facedetectcnn-model.cpp  facedetectcnn.cpp  facedetectcnn.h  interface.py
clib/src/: CMakeLists.txt  wrapper.cpp
clib/src/base/: CMakeLists.txt  facedetectcnn-data.cpp  facedetectcnn-model.cpp  facedetectcnn.cpp  facedetectcnn.h
clib/src/neon/: CMakeLists.txt  facedetectcnn-data.cpp  facedetectcnn-data_neon.cpp  facedetectcnn-model.cpp  facedetectcnn-modelcpp  facedetectcnn.cpp  facedetectcnn_neon.cpp  facedetectcnn_neon.h
clib/src/test/: CMakeLists.txt  CMakeLists.txt.bak  benchmark.cpp  dotProductTest.cpp  test.h  testComponents.cpp  testDetectFunction.cpp  testFullCNN.cpp  testFullPipeLine.cpp
clib/src/test/base/: facedetectcnn.cpp
